# ear-production-suite

./: CMakeLists.txt
.github/workflows/: build.yml
doc/: ear-production-suite.md
ear-production-suite/: CMakeLists.txt
ear-production-suite/plugins/: CMakeLists.txt
reaper-adm-extension/src/reaper_adm/: admextraction.cpp  admextraction.h  admimporter.cpp  admvstcontrol.cpp  automationenvelope.cpp  automationpoint.cpp  automationpoint.h  directspeakerautomationelement.cpp  directspeakerautomationelement.h  exportaction_admsource-admvst.cpp  exportaction_admsource-admvst.h  exportaction_admsource-earvst.cpp  exportaction_admsource-earvst.h  exportaction_parameterprocessing.cpp  hoaautomationelement.cpp  hoaautomationelement.h  nng_wrappers.h  objectautomationelement.cpp  objectautomationelement.h  parameter.cpp  parameter.h  parametervaluemapping.cpp  parametervaluemapping.h  plugin.cpp  plugin.h  pluginsuite.h  pluginsuite_ear.cpp  pluginsuite_ear.h  pluginsuite_visr.cpp  projectelements.h  track.cpp  track.h
reaper-adm-extension/src/reaper_adm/progress/: importdialog.cpp  importlistener.cpp  importlistener.h  importprogress.cpp  importprogress.h
reaper-adm-extension/test/reaper_adm/: automationpointtests.cpp  earsuitetests.cpp  envelopetests.cpp  maptests.cpp
reaper-adm-extension/test/reaper_adm/mocks/: importlistener.h  parameter.h  parametised.h  projectelements.h  track.h
